Resource Wizard - SchemaHandling update - imrpoved work with QNames (refs in attribute and association editors, vallue and associationAttributes etc.) + more minor improvements

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.html
@@ -68,7 +68,7 @@
                             <label><wicket:message key="ResourceAssociationEditor.label.associationAttribute" /></label>
                         </dt>
                         <dd>
-                            <input wicket:id="associationAttribute" type="text" class="form-control input-sm" value=""/>
+                            <select wicket:id="associationAttribute" class="form-control input-sm"></select>
                         </dd>
                     </dl>
 
@@ -77,7 +77,7 @@
                             <label><wicket:message key="ResourceAssociationEditor.label.valueAttribute" /></label>
                         </dt>
                         <dd>
-                            <input wicket:id="valueAttribute" type="text" class="form-control input-sm" value=""/>
+                            <select wicket:id="valueAttribute" class="form-control input-sm"></select>
                         </dd>
                     </dl>
 
@@ -112,7 +112,17 @@
                             <label><wicket:message key="ResourceAssociationEditor.label.reference" /></label>
                         </dt>
                         <dd>
-                            <input wicket:id="reference" type="text" class="form-control input-sm" value=""/>
+                            <select wicket:id="referenceSelect" class="form-control input-sm"></select>
+                            <input wicket:id="referenceField" type="text" class="form-control input-sm" value=""/>
+                        </dd>
+                    </dl>
+
+                    <dl class="dl-horizontal">
+                        <dt>
+                            <label><wicket:message key="ResourceAssociationEditor.label.allow" /></label>
+                        </dt>
+                        <dd>
+                            <input wicket:id="allowRef" type="checkbox" value="checked"/>
                         </dd>
                     </dl>
 
@@ -200,7 +210,7 @@
                             <label><wicket:message key="ResourceAssociationEditor.label.matchingRule" /></label>
                         </dt>
                         <dd>
-                            <input wicket:id="matchingRule" type="text" class="form-control input-sm" value=""/>
+                            <select wicket:id="matchingRule" class="form-control input-sm"></select>
                         </dd>
                     </dl>
 
