--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.html
@@ -78,7 +78,7 @@
                         </dd>
                     </dl>
 
-                    <dl class="dl-horizontal">
+                    <dl wicket:id="tokenLanguageContainer" class="dl-horizontal">
                         <dt>
                             <label><wicket:message key="ResourceIterationEditor.label.language" /></label>
                         </dt>
@@ -87,7 +87,7 @@
                         </dd>
                     </dl>
 
-                    <dl class="dl-horizontal">
+                    <dl wicket:id="tokenPolicyContainer" class="dl-horizontal">
                         <dt>
                             <label><wicket:message key="ResourceIterationEditor.label.policyRef" /></label>
                         </dt>
@@ -101,7 +101,7 @@
                             <label><wicket:message key="ResourceIterationEditor.label.expression" /></label>
                         </dt>
                         <dd>
-                            <textarea wicket:id="tokenExpression" class="form-control input-sm" rows="4"></textarea>
+                            <textarea wicket:id="tokenExpression" class="form-control input-sm" rows="5"></textarea>
                         </dd>
                     </dl>
 
@@ -155,7 +155,7 @@
                         </dd>
                     </dl>
 
-                    <dl class="dl-horizontal">
+                    <dl wicket:id="preLanguageContainer" class="dl-horizontal">
                         <dt>
                             <label><wicket:message key="ResourceIterationEditor.label.language" /></label>
                         </dt>
@@ -164,7 +164,7 @@
                         </dd>
                     </dl>
 
-                    <dl class="dl-horizontal">
+                    <dl wicket:id="prePolicyContainer" class="dl-horizontal">
                         <dt>
                             <label><wicket:message key="ResourceIterationEditor.label.policyRef" /></label>
                         </dt>
@@ -178,7 +178,7 @@
                             <label><wicket:message key="ResourceIterationEditor.label.expression" /></label>
                         </dt>
                         <dd>
-                            <textarea wicket:id="preExpression" class="form-control input-sm" rows="4"></textarea>
+                            <textarea wicket:id="preExpression" class="form-control input-sm" rows="5"></textarea>
                         </dd>
                     </dl>
 
@@ -232,7 +232,7 @@
                         </dd>
                     </dl>
 
-                    <dl class="dl-horizontal">
+                    <dl wicket:id="postLanguageContainer" class="dl-horizontal">
                         <dt>
                             <label><wicket:message key="ResourceIterationEditor.label.language" /></label>
                         </dt>
@@ -241,7 +241,7 @@
                         </dd>
                     </dl>
 
-                    <dl class="dl-horizontal">
+                    <dl wicket:id="postPolicyContainer" class="dl-horizontal">
                         <dt>
                             <label><wicket:message key="ResourceIterationEditor.label.policyRef" /></label>
                         </dt>
