Resource Wizard, Schema Handling step update - save functionality completed + many minor improvements and small fixes made along the way.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.html
@@ -30,7 +30,7 @@
         </dd>
     </dl>
 
-    <!-- Token Expression - ExpressionType editor -->
+    <!-- Token Expression -->
     <div class="panel-group" id="accordion">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -69,6 +69,7 @@
                     </dl>
 
                     <!-- Expression -->
+                    <!--
                     <dl class="dl-horizontal">
                         <dt>
                             <label><wicket:message key="ResourceIterationEditor.label.expressionType" /></label>
@@ -104,6 +105,7 @@
                             <textarea wicket:id="tokenExpression" class="form-control input-sm" rows="5"></textarea>
                         </dd>
                     </dl>
+                    -->
 
                 </div>
             </div>
@@ -146,6 +148,7 @@
                     </dl>
 
                     <!-- Expression -->
+                    <!--
                     <dl class="dl-horizontal">
                         <dt>
                             <label><wicket:message key="ResourceIterationEditor.label.expressionType" /></label>
@@ -181,6 +184,7 @@
                             <textarea wicket:id="preExpression" class="form-control input-sm" rows="5"></textarea>
                         </dd>
                     </dl>
+                    -->
 
                 </div>
             </div>
@@ -223,6 +227,7 @@
                     </dl>
 
                     <!-- Expression -->
+                    <!--
                     <dl class="dl-horizontal">
                         <dt>
                             <label><wicket:message key="ResourceIterationEditor.label.expressionType" /></label>
@@ -258,6 +263,7 @@
                             <textarea wicket:id="postExpression" class="form-control input-sm" rows="5"></textarea>
                         </dd>
                     </dl>
+                    -->
 
                 </div>
             </div>
