--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismValuePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismValuePanel.html
@@ -17,8 +17,8 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div wicket:id="valueContainer">
-        <div wicket:id="input"/>
+    <div wicket:id="valueContainer" class="row">
+        <div wicket:id="input" class="col-cs-9"/>
 
         <div class="col-xs-3">
             <span class="btn-group">
