--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.html
@@ -56,7 +56,7 @@
 
             <dl class="dl-horizontal">
                 <dt>
-                    <label>Name</label>
+                    <label><wicket:message key="SynchronizationStep.label.name" /></label>
                 </dt>
                 <dd>
                     <input wicket:id="editorName" type="text" class="form-control input-sm"/>
@@ -65,7 +65,7 @@
 
             <dl class="dl-horizontal">
                 <dt>
-                    <label>Description</label>
+                    <label><wicket:message key="SynchronizationStep.label.description" /></label>
                 </dt>
                 <dd>
                     <textarea wicket:id="editorDescription" class="form-control input-sm" rows="2"></textarea>
@@ -74,7 +74,7 @@
 
             <dl class="dl-horizontal">
                 <dt>
-                    <label>Kind</label>
+                    <label><wicket:message key="SynchronizationStep.label.kind" /></label>
                 </dt>
                 <dd>
                     <select wicket:id="editorKind" class="form-control input-sm"></select>
@@ -83,7 +83,7 @@
 
             <dl class="dl-horizontal">
                 <dt>
-                    <label>Intent</label>
+                    <label><wicket:message key="SynchronizationStep.label.intent" /></label>
                 </dt>
                 <dd>
                     <input wicket:id="editorIntent" type="text" class="form-control input-sm"/>
@@ -93,37 +93,23 @@
             <!-- Object class list -->
             <dl class="dl-horizontal">
                 <dt>
-                    <label>Object class</label>
+                    <label><wicket:message key="SynchronizationStep.label.objectClass" /></label>
+                </dt>
+                <div wicket:id="editorObjectClass" />
+            </dl>
+
+            <dl class="dl-horizontal">
+                <dt>
+                    <label><wicket:message key="SynchronizationStep.label.focus" /></label>
                 </dt>
                 <dd>
-                    <div class="input-group">
-                        <input type="text" class="form-control input-sm" value="first"/>
-
-                        <div class="input-group-btn">
-                            <a class="btn btn-sm btn-danger" title="Remove">
-                                <i class="fa fa-minus"/>
-                            </a>
-                            <a class="btn btn-sm btn-success" title="Add">
-                                <i class="fa fa-plus"/>
-                            </a>
-                        </div>
-                    </div>
+                    <select wicket:id="editorFocus" class="form-control input-sm"></select>
                 </dd>
             </dl>
 
             <dl class="dl-horizontal">
                 <dt>
-                    <label>Focus</label>
-                </dt>
-                <dd>
-                    <input wicket:id="editorFocus" type="text" value="checked" class="form-control input-sm"/>
-                    <!--<select wicket:id="editorFocus" class="form-control input-sm"></select>-->
-                </dd>
-            </dl>
-
-            <dl class="dl-horizontal">
-                <dt>
-                    <label>Enabled</label>
+                    <label><wicket:message key="SynchronizationStep.label.enabled" /></label>
                 </dt>
                 <dd>
                     <input wicket:id="editorEnabled" type="checkbox" value="checked"/>
@@ -135,7 +121,7 @@
                 <div class="col-xs-6">
                     <dl class="dl-horizontal">
                         <dt>
-                            <label>Condition</label>
+                            <label><wicket:message key="SynchronizationStep.label.condition" /></label>
                         </dt>
                         <dd>
                             <a wicket:id="editorConditionButton" class="btn btn-sm btn-primary" title="Edit">
@@ -148,7 +134,7 @@
                 <div class="col-xs-6">
                     <dl class="dl-horizontal">
                         <dt>
-                            <label>Confirmation</label>
+                            <label><wicket:message key="SynchronizationStep.label.confirmation" /></label>
                         </dt>
                         <dd>
                             <a wicket:id="editorConfirmationButton" class="btn btn-sm btn-primary" title="Edit">
@@ -161,11 +147,10 @@
 
             <dl class="dl-horizontal">
                 <dt>
-                    <label>Object Template</label>
+                    <label><wicket:message key="SynchronizationStep.label.objectTemplate" /></label>
                 </dt>
                 <dd>
-                    <!--<select wicket:id="editorObjectTemplate" class="form-control input-sm"></select>-->
-                    <select class="form-control input-sm"></select>
+                    <select wicket:id="editorObjectTemplate" class="form-control input-sm"></select>
                 </dd>
             </dl>
 
@@ -174,7 +159,7 @@
                 <div class="col-xs-6">
                     <dl class="dl-horizontal">
                         <dt>
-                            <label>Reconcile</label>
+                            <label><wicket:message key="SynchronizationStep.label.reconcile" /></label>
                         </dt>
                         <dd>
                             <input wicket:id="editorReconcile" type="checkbox" value="checked"/>
@@ -185,7 +170,7 @@
                 <div class="col-xs-6">
                     <dl class="dl-horizontal">
                         <dt>
-                            <label>Opportunistic</label>
+                            <label><wicket:message key="SynchronizationStep.label.opportunistic" /></label>
                         </dt>
                         <dd>
                             <input wicket:id="editorOpportunistic" type="checkbox" value="checked"/>
@@ -197,90 +182,22 @@
             <!-- Correlation -->
             <dl class="dl-horizontal">
                 <dt>
-                    <label>Correlation</label>
+                    <label><wicket:message key="SynchronizationStep.label.correlation" /></label>
                 </dt>
-                <dd>
-                    <div class="input-group">
-                        <input type="text" class="form-control input-sm" value="first"/>
-
-                        <div class="input-group-btn">
-                            <a class="btn btn-sm btn-primary" title="Edit">
-                                <i class="fa fa-pencil-square-o"/>
-                            </a>
-                            <a class="btn btn-sm btn-danger" title="Remove">
-                                <i class="fa fa-minus"/>
-                            </a>
-                            <a class="btn btn-sm btn-success" title="Add">
-                                <i class="fa fa-plus"/>
-                            </a>
-                        </div>
-                    </div>
-                </dd>
-                <dd>
-                    <div class="input-group">
-                        <input type="text" class="form-control input-sm" value="first"/>
-
-                        <div class="input-group-btn">
-                            <a class="btn btn-sm btn-primary" title="Edit">
-                                <i class="fa fa-pencil-square-o"/>
-                            </a>
-                            <a class="btn btn-sm btn-danger" title="Remove">
-                                <i class="fa fa-minus"/>
-                            </a>
-                            <a class="btn btn-sm btn-success" title="Add">
-                                <i class="fa fa-plus"/>
-                            </a>
-                        </div>
-                    </div>
-                </dd>
+                <div wicket:id="editorCorrelation" />
             </dl>
 
             <!-- Reaction -->
             <dl class="dl-horizontal">
                 <dt>
-                    <label>Reaction</label>
+                    <label><wicket:message key="SynchronizationStep.label.reaction" /></label>
                 </dt>
-                <dd>
-                    <div class="input-group">
-                        <input type="text" class="form-control input-sm" value="first"/>
-
-                        <div class="input-group-btn">
-                            <a class="btn btn-sm btn-primary" title="Edit">
-                                <i class="fa fa-pencil-square-o"/>
-                            </a>
-                            <a class="btn btn-sm btn-danger" title="Remove">
-                                <i class="fa fa-minus"/>
-                            </a>
-                            <a class="btn btn-sm btn-success" title="Add">
-                                <i class="fa fa-plus"/>
-                            </a>
-                        </div>
-                    </div>
-                </dd>
-                <dd>
-                    <div class="input-group">
-                        <input type="text" class="form-control input-sm" value="first"/>
-
-                        <div class="input-group-btn">
-                            <a class="btn btn-sm btn-primary" title="Edit">
-                                <i class="fa fa-pencil-square-o"/>
-                            </a>
-                            <a class="btn btn-sm btn-danger" title="Remove">
-                                <i class="fa fa-minus"/>
-                            </a>
-                            <a class="btn btn-sm btn-success" title="Add">
-                                <i class="fa fa-plus"/>
-                            </a>
-                        </div>
-                    </div>
-                </dd>
+                <div wicket:id="editorReaction" />
             </dl>
         </div>
 
         <!-- Third row - container for more specific editors -->
-        <div wicket:id="thirdRowContainer" class="col-xs-7 col-sm-6 col-md-4" >
-            <h3>Third Row Editor</h3>
-        </div>
+        <div wicket:id="thirdRowContainer" class="col-xs-7 col-sm-6 col-md-4" />
 
     </div>
 </wicket:panel>
