Fixing bugs, adding Icons and basic i18n.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/status/StatusPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/status/StatusPanel.html
@@ -23,7 +23,7 @@
         <table border="1">
             <tr wicket:id="statusItems">
                 <td><span wicket:id="description"></span></td>
-                <td><span wicket:id="state"></span></td>
+                <td><i wicket:id="state"></i></td>
             </tr>
         </table>
         <hr/>
