Better names for classes.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/status/ProgressPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/status/ProgressPanel.html
@@ -21,9 +21,9 @@
     <div wicket:id="contents">
         <hr/>
         <table border="1">
-            <tr wicket:id="statusItems">
+            <tr wicket:id="progressReportActivities">
                 <td><span wicket:id="description"></span></td>
-                <td><i wicket:id="state"></i></td>
+                <td><i wicket:id="status"></i></td>
             </tr>
         </table>
         <hr/>
