Abort + showing projector operation.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.html
@@ -33,6 +33,10 @@
                 <input type="checkbox" wicket:id="executeAfterAllApprovals">
                 <wicket:message key="ExecuteChangeOptionsPanel.label.executeAfterAllApprovals"/>
             </label>
+            <label class="col-lg-3 checkbox-inline">
+                <input type="checkbox" wicket:id="keepDisplayingResults">
+                <wicket:message key="ExecuteChangeOptionsPanel.label.keepDisplayingResults"/>
+            </label>
         </div>
     </div>
 </wicket:panel>
