Resource Wizard - Sync Step update - Correlation editor implementation, added improved generic Expression editor. Added Confirmation and Condition editor.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationExpressionEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationExpressionEditor.html
@@ -16,6 +16,8 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <h3>Condition/Confirmation Editor</h3>
+    <h3><span wicket:id="label"></span></h3>
+
+    <div wicket:id="expressionPanel" />
 </wicket:panel>
 </html>
