--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/ConditionalSearchFilterEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/ConditionalSearchFilterEditor.html
@@ -16,6 +16,18 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <h3>Edit Synchronization Correlation</h3>
+    <h3><wicket:message key="ConditionalSearchFilterEditor.label" /></h3>
+
+    <dl class="dl-horizontal">
+        <dt>
+            <label><wicket:message key="ConditionalSearchFilterEditor.description" /></label>
+        </dt>
+        <dd>
+            <textarea wicket:id="description" class="form-control input-sm" rows="2"></textarea>
+        </dd>
+    </dl>
+
+    <div wicket:id="expressionPanel" />
+
 </wicket:panel>
 </html>
