Showing touched resource object names. Abort implemented more seriously. Made progress reporting configurable. Streamlined the implementation.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.html
@@ -33,7 +33,7 @@
                 <input type="checkbox" wicket:id="executeAfterAllApprovals">
                 <wicket:message key="ExecuteChangeOptionsPanel.label.executeAfterAllApprovals"/>
             </label>
-            <label class="col-lg-3 checkbox-inline">
+            <label class="col-lg-3 checkbox-inline" wicket:id="keepDisplayingResultsLabel">
                 <input type="checkbox" wicket:id="keepDisplayingResults">
                 <wicket:message key="ExecuteChangeOptionsPanel.label.keepDisplayingResults"/>
             </label>
