--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/progress/ProgressPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/progress/ProgressPanel.html
@@ -19,18 +19,26 @@
 <body>
 <wicket:panel>
     <div wicket:id="contents">
-        <hr/>
+        <br/>
         <table border="1">
+            <tr>
+                <th><b><wicket:message key="ProgressTableHeader.Activity"/></b></th>
+                <th><b><wicket:message key="ProgressTableHeader.Status"/></b></th>
+                <th><b><wicket:message key="ProgressTableHeader.ResourceObject"/></b></th>
+            </tr>
             <tr wicket:id="progressReportActivities">
                 <td><span wicket:id="description"></span></td>
                 <td><i wicket:id="status"></i></td>
+                <td><span wicket:id="comment"></span></td>
             </tr>
         </table>
-        <hr/>
+        <br/>
+        <span wicket:id="executionTime"/>
+        <br/>
         <span wicket:id="logItems">
             <span wicket:id="logItem">label</span><br/>
         </span>
-        <hr/>
+        <br/>
     </div>
 </wicket:panel>
 </body>
