--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/SearchFilterPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/SearchFilterPanel.html
@@ -13,22 +13,40 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <h3><wicket:message key="ConditionalSearchFilterEditor.label" /></h3>
 
     <dl class="dl-horizontal">
         <dt>
-            <label><wicket:message key="ConditionalSearchFilterEditor.description" /></label>
+            <label><wicket:message key="SearchFilterPanel.label.description" /></label>
         </dt>
         <dd>
             <textarea wicket:id="description" class="form-control input-sm" rows="2"></textarea>
         </dd>
     </dl>
 
-    <div wicket:id="expressionPanel" />
-    <div wicket:id="filterClausePanel" />
+    <dl class="dl-horizontal">
+        <dt>
+            <label><wicket:message key="SearchFilterPanel.label.filterClause" /></label>
+        </dt>
+        <dd>
+            <textarea wicket:id="filterClause" class="form-control input-sm" rows="10"></textarea>
+        </dd>
+    </dl>
+
+    <dl class="dl-horizontal">
+        <dt>
+            <label></label>
+        </dt>
+        <dd>
+            <!--TODO - enable this button when problem with SearchFilterType and RootXNode serialization is fixed-->
+            <a wicket:id="update" class="btn btn-success disabled">
+                <span><wicket:message key="SearchFilterPanel.button.update" /></span>
+            </a>
+        </dd>
+    </dl>
 
 </wicket:panel>
 </html>
