--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceProtectedEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceProtectedEditor.html
@@ -56,23 +56,7 @@
                         </dl>
 
                         <h4><wicket:message key="ResourceProtectedEditor.label.filter" /></h4>
-                        <dl class="dl-horizontal">
-                            <dt>
-                                <label><wicket:message key="ResourceProtectedEditor.label.description" /></label>
-                            </dt>
-                            <dd>
-                                <textarea wicket:id="filterDescription" class="form-control input-sm" rows="2"></textarea>
-                            </dd>
-                        </dl>
-
-                        <dl class="dl-horizontal">
-                            <dt>
-                                <label><wicket:message key="ResourceProtectedEditor.label.filterClause" /></label>
-                            </dt>
-                            <dd>
-                                <input wicket:id="filterClause" type="text" class="form-control input-sm" value=""/>
-                            </dd>
-                        </dl>
+                        <div wicket:id="filterClause" />
                     </div>
                 </div>
             </div>
