--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceProtectedEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceProtectedEditor.html
@@ -28,9 +28,11 @@
                 <div class="panel-heading">
                     <h4 class="panel-title">
                         <a wicket:id="accountLink" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                            <button wicket:id="deleteAccount" type="button" class="close"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                            <span class="close">&nbsp;</span>
+                            <button type="button" class="close"><span aria-hidden="true">&#8628;</span><span class="sr-only">Expand</span></button>
                             <span wicket:id="accountLinkName"></span>
                         </a>
-                        <button wicket:id="deleteAccount" type="button" class="close"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                     </h4>
                 </div>
 
