PAsswordSecurity Questions Merge

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top/UserMenuPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top/UserMenuPanel.html
@@ -23,6 +23,7 @@
             <ul class="dropdown-menu">
                 <!--<li><div wicket:id="editProfile" /></li>-->
                 <li><div wicket:id="resetPasswords" /></li>
+                <li><div wicket:id="editPasswordQuestions"/></li>
                 <li class="divider"></li>
                 <li><a wicket:id="logoutLink"/></li>
             </ul>
