--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.html
@@ -35,7 +35,7 @@
                 </h4>
             </div>
 
-            <div id="main" class="panel-collapse collapse in">
+            <div id="main" class="panel-collapse collapse">
                 <div class="panel-body">
 
                     <dl class="dl-horizontal">
@@ -112,7 +112,7 @@
                 </h4>
             </div>
 
-            <div id="other" class="panel-collapse collapse">
+            <div id="other" class="panel-collapse collapse in">
                 <div class="panel-body">
 
                     <dl wicket:id="schemaRefPanel" class="dl-horizontal">
