Changing synchronize checkbox in synchronization step in RW to threeState widget

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/ThreeStateBooleanPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/ThreeStateBooleanPanel.html
@@ -18,7 +18,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
 
-    <div class="btn-group" data-toggle="buttons-radio">
+    <div class="btn-group btn-group-xs" data-toggle="buttons-radio">
         <button wicket:id="optionOne" type="button" class="btn"></button>
         <button wicket:id="optionTwo" type="button" class="btn"></button>
         <button wicket:id="optionThree" type="button" class="btn"></button>
