fix for CSS clearfix problems with search bars in firefox

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/dialog/UserBrowserDialog.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/dialog/UserBrowserDialog.html
@@ -17,32 +17,34 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <div wicket:id="content">
 
-        <form class="form-inline pull-right search-form" wicket:id="searchForm"
-              style="padding: 5px;">
-            <table style="display: inline; margin-right: 30px;">
-                <tr>
-                    <td>
-                        <input type="checkbox" wicket:id="nameCheck" size="30"/>
-                        <wicket:message key="userBrowserDialog.name"/>
-                    </td>
-                    <td><input type="checkbox" wicket:id="fullNameCheck"/>
-                        <wicket:message key="userBrowserDialog.fullName"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <input type="checkbox" wicket:id="givenNameCheck"/>
-                        <wicket:message key="userBrowserDialog.givenName"/>
-                    </td>
-                    <td>
-                        <input type="checkbox" wicket:id="familyNameCheck"/>
-                        <wicket:message key="userBrowserDialog.familyName"/>
-                    </td>
-                </tr>
-            </table>
+        <div class="clearfix">
+            <form class="form-inline pull-right search-form" wicket:id="searchForm"
+                  style="padding: 5px;">
+                <table style="display: inline; margin-right: 30px;">
+                    <tr>
+                        <td>
+                            <input type="checkbox" wicket:id="nameCheck" size="30"/>
+                            <wicket:message key="userBrowserDialog.name"/>
+                        </td>
+                        <td><input type="checkbox" wicket:id="fullNameCheck"/>
+                            <wicket:message key="userBrowserDialog.fullName"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="checkbox" wicket:id="givenNameCheck"/>
+                            <wicket:message key="userBrowserDialog.givenName"/>
+                        </td>
+                        <td>
+                            <input type="checkbox" wicket:id="familyNameCheck"/>
+                            <wicket:message key="userBrowserDialog.familyName"/>
+                        </td>
+                    </tr>
+                </table>
 
-            <div wicket:id="basicSearch" />
-        </form>
+                <div wicket:id="basicSearch" />
+            </form>
+        </div>
 
         <form  class="clearfix" wicket:id="mainForm" style="margin: 5px;">
             <div wicket:id="table"/>
