--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser.html
@@ -19,11 +19,13 @@
 
     <div wicket:id="content">
 
-        <form wicket:id="mainForm" class="form-inline pull-right"
-                style="padding: 5px;">
+        <div class="clearfix">
+            <form wicket:id="mainForm" class="form-inline pull-right"
+                    style="padding: 5px;">
 
-            <div wicket:id="basicSearch" />
-        </form>
+                <div wicket:id="basicSearch" />
+            </form>
+        </div>
 
         <div class="clearfix">
             <div wicket:id="table"/>
